--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "ipython>=9.9.0",
     "loguru>=0.7.3",
+    "playwright>=1.57.0",
     "polars>=1.36.1",
     "pyalex>=0.19",
     "pyarrow>=22.0.0",
