--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "ipython>=9.9.0",
     "loguru>=0.7.3",
+    "markitdown[full]>=0.1.4",
     "playwright>=1.57.0",
     "polars>=1.36.1",
     "pyalex>=0.19",
